# python-artifacts

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/PYTHON-ARTIFACTS/: __init__.py
