[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-artifacts"
version = "1.0.0"
description = "Internal Python library"
authors = [
  { name="gulamd", email="gulamrasool78655@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
